--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8"/>
   <link rel="stylesheet" href="{% static 'style.css' %}"/>
   <link href='//fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700,800,900' rel='stylesheet'>
+  <link href="https://fonts.googleapis.com/css?family=Spectral" rel="stylesheet">
   <title>JTX</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
