--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -594,6 +594,7 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   padding-bottom: 1px;
   margin-top: 7px;
   width: 844px;
+  overflow: hidden;
 }
 
 .bandeau_haut{
@@ -636,15 +637,15 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   text-decoration: none;
   color: black;
   float: right;
-  margin-top: -35px;
+  margin-top: -41px;
   margin-right: -10px;
   padding-bottom: 4px;
   padding-left: 4px;
-  padding-top: 4px;
+  padding-top: 8px;
   padding-right: 4px;
   border-bottom-left-radius: 5px;
-  background-color: white;
-  background-color:#dddddd;
+
+  background-color:#c8c8c8;
 
   -webkit-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
   -moz-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
@@ -660,7 +661,7 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   width: 0px;
   height: 0px;
   vertical-align: middle;
-
+  padding-left: 5px;
   padding-bottom: 4px;
   -webkit-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
   -moz-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
