--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -3,6 +3,10 @@
     font-family: Roboto;
 }
 
+a {
+   outline: 0;
+}
+
 a:-webkit-any-link{
 text-decoration:none !important;
 }
@@ -655,13 +659,14 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 .proj_vid_suiv:hover .proj_vid_suiv_img{
   width: 13px;
   height: 13px;
+  padding-left:5px;
 }
 
 .proj_vid_suiv_img{
   width: 0px;
   height: 0px;
   vertical-align: middle;
-  padding-left: 5px;
+  padding-left:0px;
   padding-bottom: 4px;
   -webkit-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
   -moz-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
