--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -32,6 +32,7 @@ body{
     margin-top: 60px;
     overflow: scroll;
     overflow-y:scroll;
+    /*padding-left:220px; SI ON RAJOUTE LA BARRE*/
 }
 
 /*
