Nouvelle méthode de sélection des résultats de recherche : les touches up down enter !

--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -159,6 +159,7 @@ Style de la Lateral Bar
   text-decoration: none;
   color:black;
   height: 20px;
+  background-color: white;
 }
 
 .search_result:hover{
