--- a/videos/templates/jtx.html
+++ b/videos/templates/jtx.html
@@ -15,7 +15,7 @@
 				<span class="page_jtx_proj_titre">{{p.titre}}</span>
 				<hr class="jtx_hr">
 
-
+				<div class="bloc_video">
 				<div class="page_jtx_proj_image">
 					<a href="{% url 'proj' p.id %}">
 							<figure class="figure_liste">
@@ -46,6 +46,7 @@
 								  {{ p.date|date:"d/m/Y" }}
 					</div>
 				</div>
+			</div>
 
 				<div class="page_jtx_proj_description">
 					<b>Le mot du JTX</b><br>
