--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -1426,7 +1426,7 @@ padding-top: 5px;
   margin-top: 0px;
   text-align: center;
   font-size: 100px;
-  letter-spacing: 50px;
+  letter-spacing: 5px;
   font-weight: 100;
 
 }
@@ -1446,9 +1446,12 @@ padding-top: 5px;
 }
 
 
-.diplay_proj{
+.display_proj{
   display: table;
   margin:0 auto;
+  vertical-align: middle;
+
+
 }
 
 .page_jtx_vue_jaime{
@@ -1465,6 +1468,8 @@ padding-top: 5px;
   padding: 2px;
 
 }
+
+
 
 .page_jtx_proj_titre{
   letter-spacing: 0px;
@@ -1483,9 +1488,11 @@ padding-top: 5px;
 }
 
 .page_jtx_proj{
+  margin:0 auto;
+  margin-top: 10px;
   padding: 7px;
   display:inline-block;
-  width: 425px;
+  width: 375px;
 
 
   background-color: white;
@@ -1496,6 +1503,10 @@ padding-top: 5px;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   transition: all 0.2s linear;
+}
+
+.page_jtx_proj a{
+  text-decoration: none;
 }
 
 .page_jtx_proj:hover{
@@ -1521,7 +1532,7 @@ padding-top: 5px;
   border-top: 1px solid #E2E2E2;
 
   padding: 0;
-  width: 439px;
+  width: 389px;
   position: relative;
   left: -7px;
   margin-bottom: 12px;
@@ -1530,7 +1541,8 @@ padding-top: 5px;
 .page_jtx_proj_description{
   display: inline-block;
   margin-left: -10px;
-  width:200px;
+  width:150px;
+  font-size: 14px;
 }
 
 
@@ -1721,9 +1733,40 @@ margin-left: -2px;
     .input_edit{
       max-width: 500px;
     }
+
+    .display_proj{
+      display: block;
+      width: 410px;
+      margin: 0 auto;
+
+    }
+
+
+    .page_jtx_proj{
+      margin-top: 5px;
+      margin-left: 10.5px;
+    }
+
+
 }
 
 @media screen and (max-width: 1350px)  and (min-width: 1000px) {
+
+  .page_jtx_proj_description{
+    display: block;
+    width: 200px;
+    margin-left: 5px;
+    margin-top: 5px;
+  }
+
+  .page_jtx_proj{
+    width: 210px;
+  }
+
+  .jtx_hr{
+    width: 224px;
+  }
+
   .container_hr{
     width: 875px;
   }
