--- a/videos/templates/jtx.html
+++ b/videos/templates/jtx.html
@@ -72,19 +72,38 @@
 <div class="jtx_liste_evnt">
 
 {% for p in projs_autres%}
-    <a href="{% url 'proj' p.id %}">
-	<div class="jtx_liste_evnt_item">
-		<div class="jtx_liste_evnt_item_title">
-            {{p.titre|short}}
-		</div>
-		<div class="jtx_liste_evnt_item_date">
-            {{p.date|date:"d/m/Y"}}
-		</div>
-		<div class="jtx_liste_evnt_item_vues">
-            Vues : {{p.views}}
-		</div>
+<div class="bloc_video">
+
+	<a href="{% url 'proj' p.id %}">
+			<figure class="figure_liste">
+					<img class="img_vid" src="https://upload.wikimedia.org/wikipedia/commons/7/7c/Aspect_ratio_16_9_example.jpg"/>
+					<div class="legende_vid_duree">
+								{{p|duration_proj}}
+					</div>
+
+			</figure>
+	</a>
+
+	<a href="{% url 'proj' p.id %}">
+			<div class="legende_vid_titre">
+					{{p.titre|short}}
+			</div>
+	</a>
+
+	<div class="legende_vid_auteur">
+				<a href="{% url 'jtx' 2015 %}">
+						JTX 20{{ p | short_promo }}
+				</a>
 	</div>
-</a>
+	<div class="legende_vid_auteur">
+					{{p.views}}
+				 vues
+				 <span class="petit_point">&#9679;</span>
+
+					{{ p.date|date:"d/m/Y" }}
+	</div>
+
+</div>
 {% endfor %}
 
 </div>
