--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -1727,6 +1727,68 @@ margin-left: -2px;
   background-color: white;
   box-shadow: 0px 0px 10px -7px;
 }
+
+.container_fil{
+
+  width: 545px;
+  margin: auto;
+  padding-left: 93px;
+}
+
+.fil_ligne_div{
+  margin-top: 10px;
+  display: block;
+  height: 230px;
+}
+
+.fil_point{
+  width: 15px;
+  color:#c8c8c8;
+  position: relative;
+  padding: 0px;
+  left:220px;
+  font-size: 20px;
+  top: 75.5px;
+  padding-bottom: 9px;
+}
+
+.container_fil .bloc_video{
+
+  display: block;
+  display: table-cell;
+}
+
+.fil_barre{
+  width: 2px;
+  height: 200px;
+  background-color: #c8c8c8;
+  float: left;
+  margin-right: 70px;
+  margin-left: 225px;
+
+  position: relative;
+  top: 75.5px;
+}
+
+.fil_description{
+
+  position: relative;
+  right: 400px;
+  top:110px;
+
+}
+
+.fil_description_date{
+  text-align: right;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.fil_description_titre{
+  text-align: right;
+  text-transform: uppercase;
+}
+
 @media screen and (max-width: 1000px)  {
   .container_hr{
     width: 660px;
